<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_act_iv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc"
        app:srcCompat="@drawable/ic_number" />

    <TextView
        android:id="@+id/main_act_tv_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/placeholder_number"
        android:textAlignment="center"
        android:textColor="@color/charleston_green"
        android:textSize="72sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/main_act_et_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:autofillHints="false"
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/hint_input"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/charleston_green"
            android:textColorHint="@color/charleston_green" />

        <Button
            android:id="@+id/main_act_bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/charleston_green"
            android:fontFamily="@font/ubuntu_bold"
            android:minHeight="48dp"
            android:text="@string/btn_submit"
            android:textAlignment="center"
            android:textColor="@color/alabaster" />

    </LinearLayout>

    <Button
        android:id="@+id/main_act_bt_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/charleston_green"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/btn_random"
        android:textAlignment="center"
        android:textColor="@color/alabaster" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/main_act_bt_decrement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/antique_ruby"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/btn_decrement"
            android:textAlignment="center"
            android:textColor="@color/alabaster" />

        <EditText
            android:id="@+id/main_act_et_interval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="3"
            android:autofillHints="false"
            android:ems="10"
            android:fontFamily="@font/ubuntu_bold"
            android:hint="@string/placeholder_interval"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/charleston_green"

            android:textColorHint="@color/charleston_green" />

        <Button
            android:id="@+id/main_act_bt_increment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/antique_ruby"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/btn_increment"
            android:textAlignment="center"
            android:textColor="@color/alabaster" />
    </LinearLayout>

    <TextView
        android:id="@+id/main_act_tv_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/summmary_tv"
        android:textAlignment="center"
        android:textColor="@color/charleston_green"
        android:textSize="18sp" />
</LinearLayout>